--- a/public/3ds.html
+++ b/public/3ds.html
@@ -5,24 +5,62 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>3D-Secure — Simulation</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background: #fdf8f3;
+      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .secure-box {
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      text-align: center;
+      max-width: 480px;
+      margin: 80px auto;
+    }
+    h1 {
+      color: #ff7a00;
+      margin-bottom: 1rem;
+    }
+    button {
+      padding: 0.8rem 1.4rem;
+      font-size: 1rem;
+      font-weight: 600;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      background: #ff7a00;
+      color: #fff;
+      transition: 0.2s ease;
+    }
+    button:hover {
+      background: #ff9b33;
+    }
+  </style>
 </head>
 <body>
-  <main style="max-width:600px;margin:60px auto;padding:20px;text-align:center;">
+
+  <main class="secure-box">
     <h1>🔒 3D-Secure (simulation)</h1>
-    <p>Simulation d’authentification bancaire. Cliquez pour valider.</p>
-    <div style="margin:20px 0;">
-      <button id="finish3ds" class="btn btn-accent">Valider 3D-Secure</button>
-    </div>
-    <p style="color:#666;font-size:.9rem">Retour automatique vers la page d’origine après validation.</p>
+    <p>Simulation d’authentification bancaire.</p>
+    <p style="margin-bottom:1rem;">Cliquez sur le bouton ci-dessous pour valider votre paiement.</p>
+    <button id="finish3ds">✅ Valider 3D-Secure</button>
+    <p style="color:#666;font-size:.9rem;margin-top:1rem;">
+      Vous serez automatiquement redirigé vers la page d’origine après validation.
+    </p>
   </main>
 
-<script>
-document.getElementById('finish3ds').addEventListener('click', ()=>{
-  const params = new URLSearchParams(location.search);
-  const ret = params.get('return') || 'card-fund.html';
-  const sep = ret.includes('?') ? '&' : '?';
-  window.location.href = `${ret}${sep}3ds=ok`;
-});
-</script>
+  <script>
+    // ✅ Simulation du retour 3DS
+    document.getElementById('finish3ds').addEventListener('click', () => {
+      const params = new URLSearchParams(location.search);
+      const ret = params.get('return') || 'card-fund.html';
+      const sep = ret.includes('?') ? '&' : '?';
+      window.location.href = `${ret}${sep}3ds=ok`;
+    });
+  </script>
+
 </body>
 </html>
