Message clair sur la modif

--- a/public/profile.html
+++ b/public/profile.html
@@ -49,42 +49,47 @@
       </div>
       <span id="kycBadge" class="kyc-badge-inline">Non soumis</span>
     </li>
-    <li class="settings-item" onclick="location.href='releves.html'">
-      <div class="settings-left">
-        <span class="settings-icon">📄</span>
-        <span>Historique des transferts</span>
-      </div>
-    </li>
     <li class="settings-item">
-      <div class="settings-left">
-        <span class="settings-icon">🏦</span>
-        <span>Limites</span>
-      </div>
-    </li>
-    <li class="settings-item">
-      <div class="settings-left">
-        <span class="settings-icon">💳</span>
-        <span>Gérer vos cartes</span>
-      </div>
-    </li>
-    <li class="settings-item">
-      <div class="settings-left">
-        <span class="settings-icon">🔒</span>
-        <span>Paramètres</span>
-      </div>
-    </li>
-    <li class="settings-item">
-      <div class="settings-left">
-        <span class="settings-icon">❓</span>
-        <span>Support</span>
-      </div>
-    </li>
-    <li class="settings-item">
-      <div class="settings-left">
-        <span class="settings-icon">ℹ️</span>
-        <span>Mentions légales</span>
-      </div>
-    </li>
+  <a href="releves.html" class="settings-left">
+    <span class="settings-icon">📜</span>
+    <span>Historique des transferts</span>
+  </a>
+</li>
+
+<li class="settings-item">
+  <a href="limites.html" class="settings-left">
+    <span class="settings-icon">🏦</span>
+    <span>Limites</span>
+  </a>
+</li>
+
+<li class="settings-item">
+  <a href="cartes.html" class="settings-left">
+    <span class="settings-icon">💳</span>
+    <span>Gérer vos cartes</span>
+  </a>
+</li>
+
+<li class="settings-item">
+  <a href="parametres.html" class="settings-left">
+    <span class="settings-icon">🔒</span>
+    <span>Paramètres</span>
+  </a>
+</li>
+
+<li class="settings-item">
+  <a href="support.html" class="settings-left">
+    <span class="settings-icon">❓</span>
+    <span>Support</span>
+  </a>
+</li>
+
+<li class="settings-item">
+  <a href="mentions.html" class="settings-left">
+    <span class="settings-icon">ℹ️</span>
+    <span>Mentions légales</span>
+  </a>
+</li>
   </ul>
 </main>
 
